--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unrelated - An UNDERTALE Fangame</title>
-    <link rel="stylesheet" href="ihatenamingfiles.css">
+    <link rel="stylesheet" href="layout.css">
 </head>
 <body>
     <canvas id="game" width="640" height="480"></canvas>
